--- a/Lab4/Mastermind.ipynb
+++ b/Lab4/Mastermind.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.134405Z",
@@ -36,11 +36,25 @@
     "code_folding": [
      0
     ],
+    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/wsYPsrzCKiA\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/wsYPsrzCKiA\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
@@ -85,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.383880Z",
@@ -93,7 +107,20 @@
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/GtOt7EBNEwQ\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/GtOt7EBNEwQ\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
@@ -108,14 +135,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T05:32:31.241978Z",
      "start_time": "2020-10-07T05:32:31.234857Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5056323827725416\n",
+      "0.8008933254258562\n",
+      "0.6887324370451166\n",
+      "0.7208390914947982\n",
+      "0.7390458836558571\n",
+      "0.27781151066357435\n",
+      "0.5769268575588216\n",
+      "0.6293908383955774\n",
+      "0.4249562404796777\n",
+      "0.047221107242947036\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "for i in range(10): print(random.random())  # random floating point numbers in [0,1)"
@@ -123,28 +167,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.490257Z",
      "start_time": "2020-10-07T04:59:51.484597Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 5 8 10 6 5 6 9 4 6 "
+     ]
+    }
+   ],
    "source": [
     "for i in range(10): print(random.randint(3,10),end=' ')  # random integer in range [3,10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.501184Z",
      "start_time": "2020-10-07T04:59:51.491774Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GBRGRRBBGG"
+     ]
+    }
+   ],
    "source": [
     "for i in range(10): print(random.choice('RBG'),end='')  # random element in the sequence 'RBG'"
    ]
@@ -159,14 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.569869Z",
      "start_time": "2020-10-07T04:59:51.562686Z"
-    }
+    },
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 3 5 3 4 3 7 3 4 6 "
+     ]
+    }
+   ],
    "source": [
     "# repeatedly run the cell to see new sequences.\n",
     "random.seed(123456)\n",
@@ -186,16 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.660959Z",
      "start_time": "2020-10-07T04:59:51.654030Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "b57b920c791edeff0eb8ee8fe73efe0e",
      "grade": false,
      "grade_id": "get_code",
      "locked": false,
@@ -214,14 +280,17 @@
     "    In each iteration, generate a random (integer) position in range 0 to len(colors)-1. \n",
     "    From color, get the character at that random position and append the character to code\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    ### BEGIN SOLUTION\n",
+    "    for i in range(code_length):\n",
+    "        p = int(random.random()*len(colors))\n",
+    "        code += colors[p]\n",
+    "    ### END SOLUTION\n",
     "    return code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.673718Z",
@@ -230,11 +299,7 @@
     "code_folding": [
      0
     ],
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "fd63be915d4e5148640209bfaff8c19d",
      "grade": true,
      "grade_id": "test-get_code",
      "locked": true,
@@ -248,7 +313,24 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "### BEGIN HIDDEN TESTS\n",
+    "\n",
+    "def test_get_code(colors, code_length):\n",
+    "    code = get_code(colors,code_length)\n",
+    "    if (len(code)!=code_length): \n",
+    "        return False\n",
+    "    for c in code:\n",
+    "        if (c not in colors):\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Unused color codes to check whether the function is really reading from input string\n",
+    "for l in range(10):\n",
+    "    assert(test_get_code(\"ACDEFHIJ\",l))  \n",
+    "    \n",
+    "### END HIDDEN TESTS    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,16 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.854081Z",
      "start_time": "2020-10-07T04:59:51.850376Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "cf136637816a072f4c2cf89b0a55ebe0",
      "grade": false,
      "grade_id": "valid_code",
      "locked": false,
@@ -326,13 +405,26 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "### BEGIN SOLUTION\n",
+    "def valid_code(colors, code_length, guess):\n",
+    "    if len(guess) != code_length:\n",
+    "        is_valid = False\n",
+    "    else:\n",
+    "        for peg in guess:\n",
+    "            for color in colors:\n",
+    "                if peg == color: break\n",
+    "            else:\n",
+    "                is_valid = False\n",
+    "                break\n",
+    "        else:\n",
+    "            is_valid = True\n",
+    "    return is_valid\n",
+    "### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:51.866265Z",
@@ -341,11 +433,7 @@
     "code_folding": [
      0
     ],
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "1fdfdcf1fb8fa0aaae27d03aa30dcd4f",
      "grade": true,
      "grade_id": "test-valid_code",
      "locked": true,
@@ -364,7 +452,12 @@
     "assert valid_code('RBG',1,'R') == True\n",
     "assert valid_code('RBG',2,'B') == False\n",
     "assert valid_code('RBG',2,'RP') == False\n",
-    "assert valid_code('RBG',0,'') == True"
+    "assert valid_code('RBG',0,'') == True\n",
+    "### BEGIN HIDDEN TESTS\n",
+    "assert valid_code('RBG',4,'RBBG') == True\n",
+    "assert valid_code('RBGY',2,'BY') == True\n",
+    "assert valid_code('RBGY',5,'RBGY') == False\n",
+    "### END HIDDEN TESTS"
    ]
   },
   {
@@ -397,16 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:52.125047Z",
      "start_time": "2020-10-07T04:59:52.119853Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "29cd783448a79b5283dc57a836654b78",
      "grade": false,
      "grade_id": "markposition",
      "locked": false,
@@ -417,13 +507,14 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "### BEGIN SOLUTION\n",
+    "from markposition import mark_as_counted, check_if_counted, reset_all_to_not_counted\n",
+    "### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:52.134649Z",
@@ -432,11 +523,7 @@
     "code_folding": [
      0
     ],
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "02a3154439ac8fca045ea45917ffdda9",
      "grade": true,
      "grade_id": "test-markposition",
      "locked": true,
@@ -451,7 +538,12 @@
     "# Tests\n",
     "reset_all_to_not_counted()\n",
     "mark_as_counted(3)\n",
-    "assert check_if_counted(3) and not check_if_counted(0)"
+    "assert check_if_counted(3) and not check_if_counted(0)\n",
+    "### BEGIN HIDDEN TESTS\n",
+    "reset_all_to_not_counted()\n",
+    "mark_as_counted(8)\n",
+    "assert check_if_counted(8) and not check_if_counted(0)\n",
+    "### END HIDDEN TESTS"
    ]
   },
   {
@@ -469,16 +561,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:52.212420Z",
      "start_time": "2020-10-07T04:59:52.207765Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "609c9d44fcf604b968abd407bf05b82f",
      "grade": false,
      "grade_id": "reset_all_to_not_counted",
      "locked": false,
@@ -489,13 +578,16 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "### BEGIN SOLUTION\n",
+    "reset_all_to_not_counted()\n",
+    "for i in range(0,11,2):\n",
+    "    mark_as_counted(i)\n",
+    "### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:52.225029Z",
@@ -504,11 +596,7 @@
     "code_folding": [
      0
     ],
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "50b6ac50f054c32956ad1280f3afed0a",
      "grade": true,
      "grade_id": "test-reset_all_to_not_counted",
      "locked": true,
@@ -522,7 +610,12 @@
    "source": [
     "# Tests\n",
     "for i in range(11):\n",
-    "    assert not check_if_counted(i) if i % 2 else check_if_counted(i)"
+    "    assert not check_if_counted(i) if i % 2 else check_if_counted(i)\n",
+    "### BEGIN HIDDEN TESTS\n",
+    "for i in range(22):\n",
+    "    assert not check_if_counted(\n",
+    "        i) if i % 2 or i > 10 or i < 0 else check_if_counted(i)\n",
+    "### END HIDDEN TESTS"
    ]
   },
   {
@@ -568,16 +661,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:52.312204Z",
      "start_time": "2020-10-07T04:59:52.307664Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "578b868697e5a6346fa2935ba0008739",
      "grade": false,
      "grade_id": "get_feedback",
      "locked": false,
@@ -591,13 +681,28 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "### BEGIN SOLUTION\n",
+    "def get_feedback(code, guess):\n",
+    "    black_key_pegs_count = white_key_pegs_count = counted = 0\n",
+    "    reset_all_to_not_counted()\n",
+    "    for i in range(len(guess)):\n",
+    "        if guess[i] == code[i]:\n",
+    "            black_key_pegs_count += 1\n",
+    "            mark_as_counted(i)\n",
+    "    for i in range(len(guess)):\n",
+    "        for j in range(len(code)):\n",
+    "            if  code[i] != guess[i] == code[j] and not check_if_counted(j):\n",
+    "                white_key_pegs_count += 1\n",
+    "                mark_as_counted(j)\n",
+    "                break\n",
+    "    key = 'b' * black_key_pegs_count + 'w' * white_key_pegs_count\n",
+    "    return key\n",
+    "### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-07T04:59:52.330320Z",
@@ -606,11 +711,7 @@
     "code_folding": [
      0
     ],
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "3bdec566e8122108e2f6508c1782c9b2",
      "grade": true,
      "grade_id": "test-get_feedback",
      "locked": true,
@@ -644,7 +745,30 @@
     "test_get_feedback(5*'b'+'w'*2,\"RRRRGGG\",\"RRRGGGR\")\n",
     "test_get_feedback(1*'b'+'w'*0,\"RRRRGGG\",\"RYYPPBB\")\n",
     "test_get_feedback(0*'b'+'w'*1,\"RRRRG\",\"GBBBB\")\n",
-    "test_get_feedback(0*'b'+'w'*0,\"RRRRG\",\"YBBBB\")"
+    "test_get_feedback(0*'b'+'w'*0,\"RRRRG\",\"YBBBB\")\n",
+    "### BEGIN HIDDEN TESTS\n",
+    "test_get_feedback(1*'b'+'w'*0,\"BBBB\",\"RGBY\")\n",
+    "test_get_feedback(1*'b'+'w'*0,\"RGBY\",\"BBBB\")\n",
+    "test_get_feedback(4*'b'+'w'*0,\"RGBY\",\"RGBY\")\n",
+    "test_get_feedback(0*'b'+'w'*4,\"RGBY\",\"GBYR\")\n",
+    "test_get_feedback(0*'b'+'w'*0,\"RRYB\",\"PPPP\")\n",
+    "test_get_feedback(1*'b'+'w'*0,\"RRYB\",\"GRPP\")\n",
+    "test_get_feedback(0*'b'+'w'*2,\"RGYB\",\"GRPP\")\n",
+    "test_get_feedback(1*'b'+'w'*1,\"RGRB\",\"YRRY\")\n",
+    "test_get_feedback(1*'b'+'w'*0,\"RGRB\",\"BBBB\")\n",
+    "test_get_feedback(1*'b'+'w'*1,\"RGRB\",\"RBYY\")\n",
+    "test_get_feedback(2*'b'+'w'*0,\"RGRB\",\"RGYY\")\n",
+    "test_get_feedback(2*'b'+'w'*2,\"RGRR\",\"RRGR\")\n",
+    "\n",
+    "def generate_test_get_feedback(n):\n",
+    "    colors = 'ROYGBP'\n",
+    "    code_length = 4\n",
+    "    for code, guess in [[get_code(colors,code_length) for j in range(2)] for i in range(n)]:\n",
+    "        print(f'test_get_feedback{(get_feedback(code,guess),code,guess)}')\n",
+    "\n",
+    "\n",
+    "# generate_test_get_feedback(6)\n",
+    "### END HIDDEN TESTS"
    ]
   },
   {
@@ -671,14 +795,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-07T04:59:52.727781Z",
-     "start_time": "2020-10-07T04:59:52.538185Z"
-    }
+     "end_time": "2020-10-08T08:49:56.643672Z",
+     "start_time": "2020-10-08T08:49:56.494138Z"
+    },
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd45c944469c426eafd560cce7d83d12",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(IntSlider(value=10, description='# guesses:', max=15, min=5), IntSlider(value=4, description='C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# mastermind\n",
     "import ipywidgets as widgets\n",
@@ -808,9 +948,17 @@
     "\n",
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Create Assignment",
   "kernelspec": {
    "display_name": "Python 3.7",
    "language": "python",
