--- a/Lab5/Objects.ipynb
+++ b/Lab5/Objects.ipynb
@@ -64,17 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T11:45:31.284298Z",
-     "start_time": "2020-10-15T11:45:31.280632Z"
+     "end_time": "2020-10-19T11:54:42.802457Z",
+     "start_time": "2020-10-19T11:54:42.785503Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.data.gov.hk/v1/historical-archive/get-file?url=http%3A%2F%2Fwww.chp.gov.hk%2Ffiles%2Fmisc%2Fenhanced_sur_covid_19_eng.csv&time=20200801-1204\n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.parse import urlencode\n",
     "\n",
@@ -116,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T11:45:47.056139Z",
-     "start_time": "2020-10-15T11:45:47.047959Z"
+     "end_time": "2020-10-19T11:58:14.948546Z",
+     "start_time": "2020-10-19T11:58:14.942666Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -142,20 +150,20 @@
     "def simple_encode(string):\n",
     "    '''Returns the string with : and / encoded to %3A and %2F respectively.'''\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    string = string.replace(':', '%3A').replace('/','%2F')\n",
+    "    print(string)\n",
+    "    return(string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T11:45:59.723700Z",
-     "start_time": "2020-10-15T11:45:59.720481Z"
+     "end_time": "2020-10-19T11:58:16.744556Z",
+     "start_time": "2020-10-19T11:58:16.739513Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -173,7 +181,15 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http%3A%2F%2Fwww.chp.gov.hk%2Ffiles%2Fmisc%2Fenhanced_sur_covid_19_eng.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# tests\n",
     "assert simple_encode(\n",
@@ -242,8 +258,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-15T11:47:35.701857Z",
-     "start_time": "2020-10-15T11:47:34.988295Z"
+     "start_time": "2020-10-19T11:59:02.683Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -268,8 +283,8 @@
     "    'url': url_building_csv,\n",
     "    'time': time\n",
     "})\n",
-    "\n",
-    "# YOUR CODE HERE\n",
+    "df_building = pd.read_csv(url_building_csv)\n",
+    "# YOUR CODE HEREt\n",
     "raise NotImplementedError()\n",
     "df_building"
    ]
@@ -282,9 +297,7 @@
      "end_time": "2020-10-10T08:37:03.968270Z",
      "start_time": "2020-10-10T08:37:03.965113Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -788,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
