--- a/Lab6/Combinatorics.ipynb
+++ b/Lab6/Combinatorics.ipynb
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-03T04:32:09.564883Z",
-     "start_time": "2020-11-03T04:32:09.552958Z"
+     "end_time": "2020-11-15T03:58:17.013117Z",
+     "start_time": "2020-11-15T03:58:17.001921Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -361,11 +361,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:18.262037Z",
-     "start_time": "2020-10-25T04:00:18.259061Z"
+     "end_time": "2020-11-14T07:05:23.145466Z",
+     "start_time": "2020-11-14T07:05:23.141880Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -385,17 +385,20 @@
    "outputs": [],
    "source": [
     "def num_permutation(n):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    if n < 0:\n",
+    "        return 0\n",
+    "    return n*num_permutation(n-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:18.273268Z",
-     "start_time": "2020-10-25T04:00:18.263661Z"
+     "end_time": "2020-11-14T07:05:24.729021Z",
+     "start_time": "2020-11-14T07:05:24.725510Z"
     },
     "code_folding": [],
     "deletable": false,
@@ -444,11 +447,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:18.283979Z",
-     "start_time": "2020-10-25T04:00:18.274591Z"
+     "end_time": "2020-11-14T07:07:30.281739Z",
+     "start_time": "2020-11-14T07:07:30.277944Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -465,21 +468,24 @@
    "outputs": [],
    "source": [
     "def num_permutation(n,k=None):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if (k!=None):\n",
+    "        return num_permutation(n) / num_permutation(n-k)\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    if n < 0:\n",
+    "        return 0\n",
+    "    return n*num_permutation(n-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:18.295745Z",
-     "start_time": "2020-10-25T04:00:18.285458Z"
+     "end_time": "2020-11-14T07:07:32.490271Z",
+     "start_time": "2020-11-14T07:07:32.486608Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -528,11 +534,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-03T07:01:13.904451Z",
-     "start_time": "2020-11-03T07:01:13.856422Z"
+     "end_time": "2020-11-14T07:09:37.064122Z",
+     "start_time": "2020-11-14T07:09:36.983581Z"
     },
     "hide_input": false
    },
@@ -846,11 +852,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:19.123241Z",
-     "start_time": "2020-10-25T04:00:19.120570Z"
+     "end_time": "2020-11-15T03:43:41.203198Z",
+     "start_time": "2020-11-15T03:43:41.195607Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -867,22 +873,34 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 6, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "def num_permutation_sequence(n):\n",
     "    output = 1\n",
-    "    for k in range(0, n + 1):\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()"
+    "    yield output\n",
+    "    for k in range(1, n + 1):\n",
+    "        output = output * (n-k+1)\n",
+    "        yield output\n",
+    "        \n",
+    "        \n",
+    "print([m for m in num_permutation_sequence(3)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:19.325021Z",
-     "start_time": "2020-10-25T04:00:19.124559Z"
+     "end_time": "2020-11-15T03:43:47.205869Z",
+     "start_time": "2020-11-15T03:43:47.201186Z"
     },
     "code_folding": [],
     "deletable": false,
@@ -927,11 +945,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:19.340660Z",
-     "start_time": "2020-10-25T04:00:19.326317Z"
+     "end_time": "2020-11-15T03:40:00.269270Z",
+     "start_time": "2020-11-15T03:40:00.261527Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -951,17 +969,26 @@
    "outputs": [],
    "source": [
     "def num_permutation_sequence(n):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    result = 1\n",
+    "    k=0\n",
+    "    while(1):\n",
+    "        flag = yield result\n",
+    "        if flag == 0:\n",
+    "            result = result * (n+1) / (n-k+1)\n",
+    "            n+=1\n",
+    "        else:\n",
+    "            k+=1\n",
+    "            result *= (n-k+1)\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:19.362723Z",
-     "start_time": "2020-10-25T04:00:19.342606Z"
+     "end_time": "2020-11-15T03:40:03.598682Z",
+     "start_time": "2020-11-15T03:40:03.591991Z"
     },
     "code_folding": [],
     "deletable": false,
@@ -1063,11 +1090,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-03T04:32:48.099637Z",
-     "start_time": "2020-11-03T04:32:48.089412Z"
+     "end_time": "2020-11-15T03:58:34.268321Z",
+     "start_time": "2020-11-15T03:58:34.257547Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -1117,11 +1144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:19.400628Z",
-     "start_time": "2020-10-25T04:00:19.391610Z"
+     "end_time": "2020-11-15T03:58:37.234359Z",
+     "start_time": "2020-11-15T03:58:37.218372Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -1138,7 +1165,18 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (2, 1)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def deduplicate_input(f):\n",
     "    '''Takes in a function f that takes a variable number of arguments \n",
@@ -1146,23 +1184,23 @@
     "    in the positional argument.'''\n",
     "    @functools.wraps(f)\n",
     "    def wrapper(*args, **kwargs):\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "\n",
-    "    return wrapper"
+    "        args = tuple(set(args))\n",
+    "        return f(*args, **kwargs)\n",
+    "    return wrapper\n",
+    "permutation = deduplicate_input(permutation)\n",
+    "permutation(1,1,2)\n",
+    "#set(permutation(1,1,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-25T04:00:24.221324Z",
-     "start_time": "2020-10-25T04:00:24.209326Z"
+     "end_time": "2020-11-15T03:58:43.313444Z",
+     "start_time": "2020-11-15T03:58:43.307522Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1191,11 +1229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-03T03:33:06.347814Z",
-     "start_time": "2020-11-03T03:33:06.339003Z"
+     "end_time": "2020-11-15T03:55:19.072180Z",
+     "start_time": "2020-11-15T03:55:19.063834Z"
     }
    },
    "outputs": [
